--- a/src/styles/_smc-reference.scss
+++ b/src/styles/_smc-reference.scss
@@ -116,7 +116,7 @@
   --smc-reference-container-color-surface-bg-darker-95: var(--smc-colors-surface-darker-95);
   --smc-reference-container-color-surface-bg-default: var(--smc-colors-surface-default);
   --smc-reference-container-color-surface-bg-lighter-10: var(--smc-colors-surface-lighter-10);
-  --smc-reference-container-color-surface-bg-transparent: var(--base-color-transparent);
+  --smc-reference-container-color-surface-bg-transparent: var(--smc-reference-opacity-transparent);
   --smc-reference-container-color-surface-border-darker-10: var(--smc-colors-surface-darker-10);
   --smc-reference-container-color-surface-border-darker-100: var(--smc-colors-surface-darker-100);
   --smc-reference-container-color-surface-border-darker-20: var(--smc-colors-surface-darker-20);
@@ -124,7 +124,7 @@
   --smc-reference-container-color-surface-border-darker-50: var(--smc-colors-surface-darker-50);
   --smc-reference-container-color-surface-border-default: var(--smc-colors-surface-default);
   --smc-reference-container-color-surface-border-lighter-10: var(--smc-colors-surface-lighter-10);
-  --smc-reference-container-color-surface-border-transparent: var(--base-color-transparent);
+  --smc-reference-container-color-surface-border-transparent: var(--smc-reference-opacity-transparent);
   --smc-reference-container-color-surface-fg-darker-10: var(--smc-colors-surface-darker-10);
   --smc-reference-container-color-surface-fg-darker-60: var(--smc-colors-surface-darker-60);
   --smc-reference-container-color-surface-fg-darker-70: var(--smc-colors-surface-darker-70);
@@ -144,16 +144,15 @@
   --smc-reference-container-color-warning-fg-darker-20: var(--smc-colors-warning-darker-20);
   --smc-reference-container-color-warning-fg-default: var(--smc-colors-warning-default);
   --smc-reference-container-color-warning-fg-lighter-100: var(--smc-colors-surface-lighter-10);
-  --smc-reference-container-effects-shadow-color-dark-darker: var(--base-color-opacity-dark-250);
-  --smc-reference-container-effects-shadow-color-dark-default: var(--base-color-opacity-dark-100);
-  --smc-reference-container-effects-shadow-color-dark-lighter: var(--base-color-opacity-dark-50);
+  --smc-reference-container-effects-tw-shadow-color-dark-darker: var(--base-color-opacity-dark-250);
+  --smc-reference-container-effects-tw-shadow-color-dark-default: var(--base-color-opacity-dark-100);
+  --smc-reference-container-effects-tw-shadow-color-dark-lighter: var(--base-color-opacity-dark-50);
   --smc-reference-container-focused-outline-color-dark-default: var(--smc-reference-container-color-surface-border-darker-100);
   --smc-reference-container-focused-outline-color-light-default: var(--smc-reference-container-color-surface-border-lighter-10);
+  --smc-reference-opacity-transparent: #ffffff00;
   --smc-reference-page-color-brand-bg-default: var(--smc-colors-brand-default);
   --smc-reference-page-color-brand-fg-default: var(--smc-colors-brand-default);
   --smc-reference-page-color-brand-fg-lighter-100: var(--smc-colors-surface-lighter-10);
-  --smc-reference-page-color-error-fg-default: var(--smc-colors-error-default);
-  --smc-reference-page-color-info-fg-default: var(--smc-colors-info-default);
   --smc-reference-page-color-primary-bg-default: var(--smc-colors-primary-default);
   --smc-reference-page-color-primary-bg-lighter-40: var(--smc-colors-primary-lighter-40);
   --smc-reference-page-color-primary-fg-default: var(--smc-colors-primary-default);
@@ -182,47 +181,59 @@
   --smc-reference-page-color-surface-fg-lighter-60: var(--smc-colors-surface-lighter-10);
   --smc-reference-page-color-warning-fg-default: var(--smc-colors-warning-default);
   /* numbers */
-  --smc-reference-container-border-sm: var(--base-dimension-10);
+  --smc-reference-container-border-radius-2xs: var(--base-dimension-40);
+  --smc-reference-container-border-radius-xs: var(--base-dimension-80);
   --smc-reference-container-border-radius-full: var(--base-dimension-10000);
-  --smc-reference-container-effects-shadow-blur-xxs: var(--base-dimension-20);
-  --smc-reference-container-effects-shadow-blur-xs: var(--base-dimension-30);
-  --smc-reference-container-effects-shadow-blur-sm: var(--base-dimension-40);
-  --smc-reference-container-effects-shadow-blur-md: var(--base-dimension-60);
-  --smc-reference-container-effects-shadow-blur-lg: var(--base-dimension-100);
-  --smc-reference-container-effects-shadow-blur-xl: var(--base-dimension-150);
-  --smc-reference-container-effects-shadow-blur-xxl: var(--base-dimension-250);
-  --smc-reference-container-effects-shadow-blur-xxxl: var(--base-dimension-500);
-  --smc-reference-container-effects-shadow-horizontal-none: var(--base-dimension-0);
-  --smc-reference-container-effects-shadow-spread-xxs: var(--base-dimension--120);
-  --smc-reference-container-effects-shadow-spread-xs: var(--base-dimension--60);
-  --smc-reference-container-effects-shadow-spread-sm: var(--base-dimension--50);
-  --smc-reference-container-effects-shadow-spread-md: var(--base-dimension--40);
-  --smc-reference-container-effects-shadow-spread-lg: var(--base-dimension--30);
-  --smc-reference-container-effects-shadow-spread-xl: var(--base-dimension--20);
-  --smc-reference-container-effects-shadow-spread-xxl: var(--base-dimension--10);
-  --smc-reference-container-effects-shadow-spread-none: var(--base-dimension-0);
-  --smc-reference-container-effects-shadow-vertical-xxs: var(--base-dimension-10);
-  --smc-reference-container-effects-shadow-vertical-xs: var(--base-dimension-20);
-  --smc-reference-container-effects-shadow-vertical-sm: var(--base-dimension-40);
-  --smc-reference-container-effects-shadow-vertical-md: var(--base-dimension-80);
-  --smc-reference-container-effects-shadow-vertical-lg: var(--base-dimension-100);
-  --smc-reference-container-effects-shadow-vertical-xl: var(--base-dimension-200);
-  --smc-reference-container-effects-shadow-vertical-xxl: var(--base-dimension-250);
+  --smc-reference-container-border-width-sm: var(--base-dimension-10);
+  --smc-reference-container-effects-tw-shadow-blur-xxs: var(--base-dimension-20);
+  --smc-reference-container-effects-tw-shadow-blur-xs: var(--base-dimension-30);
+  --smc-reference-container-effects-tw-shadow-blur-sm: var(--base-dimension-40);
+  --smc-reference-container-effects-tw-shadow-blur-md: var(--base-dimension-60);
+  --smc-reference-container-effects-tw-shadow-blur-lg: var(--base-dimension-100);
+  --smc-reference-container-effects-tw-shadow-blur-xl: var(--base-dimension-150);
+  --smc-reference-container-effects-tw-shadow-blur-xxl: var(--base-dimension-250);
+  --smc-reference-container-effects-tw-shadow-blur-xxxl: var(--base-dimension-500);
+  --smc-reference-container-effects-tw-shadow-horizontal-none: var(--base-dimension-0);
+  --smc-reference-container-effects-tw-shadow-spread-xxs: var(--base-dimension--120);
+  --smc-reference-container-effects-tw-shadow-spread-xs: var(--base-dimension--60);
+  --smc-reference-container-effects-tw-shadow-spread-sm: var(--base-dimension--50);
+  --smc-reference-container-effects-tw-shadow-spread-md: var(--base-dimension--40);
+  --smc-reference-container-effects-tw-shadow-spread-lg: var(--base-dimension--30);
+  --smc-reference-container-effects-tw-shadow-spread-xl: var(--base-dimension--20);
+  --smc-reference-container-effects-tw-shadow-spread-xxl: var(--base-dimension--10);
+  --smc-reference-container-effects-tw-shadow-spread-none: var(--base-dimension-0);
+  --smc-reference-container-effects-tw-shadow-vertical-xxs: var(--base-dimension-10);
+  --smc-reference-container-effects-tw-shadow-vertical-xs: var(--base-dimension-20);
+  --smc-reference-container-effects-tw-shadow-vertical-sm: var(--base-dimension-40);
+  --smc-reference-container-effects-tw-shadow-vertical-md: var(--base-dimension-80);
+  --smc-reference-container-effects-tw-shadow-vertical-lg: var(--base-dimension-100);
+  --smc-reference-container-effects-tw-shadow-vertical-xl: var(--base-dimension-200);
+  --smc-reference-container-effects-tw-shadow-vertical-xxl: var(--base-dimension-250);
   --smc-reference-container-focused-outline-size-default: var(--base-dimension-30);
+  --smc-reference-container-gap-4: var(--base-dimension-40);
+  --smc-reference-container-gap-8: var(--base-dimension-80);
+  --smc-reference-container-icons-nested-compact: var(--smc-reference-icon-xs);
+  --smc-reference-container-icons-nested-comfortable: var(--smc-reference-icon-md);
+  --smc-reference-container-icons-nested-spacious: var(--smc-reference-icon-lg);
+  --smc-reference-container-padding-6: var(--base-dimension-60);
+  --smc-reference-container-padding-8: var(--base-dimension-80);
+  --smc-reference-container-padding-10: var(--base-dimension-100);
+  --smc-reference-container-padding-16: var(--base-dimension-160);
+  --smc-reference-container-padding-20: var(--base-dimension-200);
+  --smc-reference-container-padding-24: var(--base-dimension-240);
+  --smc-reference-container-size-height-24: var(--base-dimension-240);
+  --smc-reference-container-size-height-32: var(--base-dimension-320);
+  --smc-reference-container-size-height-40: var(--base-dimension-400);
+  --smc-reference-container-size-height-56: var(--base-dimension-560);
+  --smc-reference-container-spacing-4: var(--base-dimension-40);
+  --smc-reference-container-spacing-6: var(--base-dimension-60);
+  --smc-reference-container-spacing-8: var(--base-dimension-80);
+  --smc-reference-container-spacing-10: var(--base-dimension-100);
+  --smc-reference-container-spacing-16: var(--base-dimension-160);
+  --smc-reference-container-spacing-20: var(--base-dimension-200);
+  --smc-reference-container-spacing-24: var(--base-dimension-240);
   --smc-reference-icon-xs: var(--base-dimension-160);
+  --smc-reference-icon-sm: var(--base-dimension-200);
   --smc-reference-icon-md: var(--base-dimension-240);
   --smc-reference-icon-lg: var(--base-dimension-320);
-  --smc-reference-icons-nested-compact: var(--smc-reference-icon-xs);
-  --smc-reference-icons-nested-comfortable: var(--smc-reference-icon-md);
-  --smc-reference-icons-nested-spacious: var(--smc-reference-icon-lg);
-  --smc-reference-sizing-24: var(--base-dimension-240);
-  --smc-reference-sizing-40: var(--base-dimension-400);
-  --smc-reference-sizing-56: var(--base-dimension-560);
-  --smc-reference-spacing-3xs: var(--base-dimension-40);
-  --smc-reference-spacing-2xs: var(--base-dimension-60);
-  --smc-reference-spacing-xs: var(--base-dimension-80);
-  --smc-reference-spacing-sm: var(--base-dimension-100);
-  --smc-reference-spacing-lg: var(--base-dimension-160);
-  --smc-reference-spacing-xl: var(--base-dimension-200);
-  --smc-reference-spacing-2xl: var(--base-dimension-240);
 }
