--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -272,6 +272,7 @@
   --base-dimension-250: 1.5625rem;
   --base-dimension-320: 2rem;
   --base-dimension-400: 2.5rem;
+  --base-dimension-440: 2.75rem;
   --base-dimension-500: 3.125rem;
   --base-dimension-560: 3.5rem;
   --base-dimension-10000: 62.5rem;
