--- a/src/styles/ids.scss
+++ b/src/styles/ids.scss
@@ -1,6 +1,6 @@
-@import 'base';
-@import 'smc-colors';
-@import 'smc-reference';
+// @import 'base';
+// @import 'smc-colors';
+// @import 'smc-reference';
 @import 'component';
 // @tailwind base;
 // @tailwind components;
